samples/_failures_safe/1761221607_c0c0b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ab6dfe9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7ab6dfe9.c:160:27: error: expected ‘]’ at end of input
  160 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_7ab6dfe9.c:160:9: error: expected declaration or statement at end of input
  160 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_7ab6dfe9.c:160:9: error: expected declaration or statement at end of input
